- Namespace bug in sieve module
- Restrict deletion of project templates that are in use.
- Tickets: Fixed wrong ticketcount
- Tickets: Sort agents for "change responsible agents" on their names
- Leavedays: fixed display of estimated leave hours (sometimes it was not shown).
- Leavedays: display used holiday hours in the leave days in the calendar module.
- Leave days / holidays: Year credit export button for admins and holiday managers.
- Fixed linked items when using document templates.
- Better font display in email client.
- Tickets billing bug fixed
- Better filename when saving mail to PC

18-02-2015 6.1.20
- Billing: Fixed and optimized the trackingcode and costcode selects in the items grid. Added autocomplete to the select fields
- Fixed updating calendar event from external email client
- To utf8 bug in active directory
- Email: Added $config['email_autolink_companies'] so email will also be linked to 
         the company when a contact has a company relation.
         ($config['email_autolink_contacts'] also need to be set to true)
- Sieve: Added :create after the fileinto action. This will autocreate the folder if it doesnt exist.
- Sieve: Fixed "Mark as read" sieve rule.
- Sieve: Added new out of office tab in the email settings dialog.
- Projects: don't focus project field on editing
- Cron job doesn't send mail but logs warnings

09-02-2015 6.1.19
- Brazilian language Saturday is UTF-8 encoded
- Comments: Changed order column of comments from ID to Ctime
- Email: Added properties button to the email client which will give the user direct access to the account settings window.
- Files folders were always created for projects
- project template create error
- Login bug on windows servers
- UTF-8 conversion is done for ActiveDirectory LDAP servers
- LDAP_OPT_REFERRALS is set to 0 by default for LDAP connections
- Leaveday module manager may change the YearCredit and approve registered leave days